update sh